# att

./: .editorconfig  .env  .gitignore  Cargo.toml  README.md  Trunk.toml  diesel.toml
.cargo/: config.toml
att/: Cargo.toml
att/src/: add_crate.rs  app.rs  crates_client.rs  main.rs  util.rs
att/src/component/: add_crate.rs  mod.rs  view_crates.rs
att/src/widget/: builder.rs  child.rs  constrained_row.rs  dark_light_toggle.rs  maybe_send.rs  mod.rs  modal.rs  table.rs
att/src/widget/builder/: internal.rs  mod.rs
att/src/widget/builder/internal/: button.rs  heap.rs  mod.rs  stack.rs  text_input.rs
att/src/widget/builder/state/: heap.rs  mod.rs  stack.rs
att/src/widget/builder/widget/: button.rs  text_input.rs
att/src/widget/table/: body.rs  header.rs  mod.rs  rows.rs  widget.rs
client/: Cargo.toml  index.html
client/src/: app.rs  async_util.rs  auth.rs  client.rs  crate_search.rs  crates.rs  crates_client.rs  follow_crates.rs  http_client.rs  lib.rs  main.rs  query_sender.rs  search_crates.rs  search_query.rs  time.rs
client/src/component/: add_crate.rs  follow_crate.rs  mod.rs  view_crates.rs
client/src/widget/: constrained_row.rs  dark_light_toggle.rs  mod.rs  modal.rs
client/src/widget/builder/state/: once.rs
client_dioxus/: .gitignore  Cargo.toml  Dioxus.toml
client_dioxus/src/: app.rs  main.rs
client_dioxus/src/app/: mod.rs
client_dioxus/src/app/crates/: follow.rs  mod.rs  search.rs
client_dioxus/src/component/: follow_crates.rs  mod.rs  view_followed_crates.rs
client_dioxus/src/hook/: context.rs  future.rs  future_once.rs  future_single.rs  mod.rs  once.rs  request.rs  value.rs
client_iced/: Cargo.toml  README.md  index.html
client_iced/src/: app.rs  main.rs  perform.rs  update.rs
client_iced/src/app/: follow_crates.rs  mod.rs  search_crates.rs
client_iced/src/component/: follow_crate.rs  follow_crates.rs  mod.rs  search_crate.rs  search_crates.rs  view_crates.rs  view_followed_crates.rs
client_iced/src/widget/: child.rs  constrained_row.rs  dark_light_toggle.rs  font.rs  icon.rs  mod.rs  modal.rs
client_iced/src/widget/builder/: mod.rs  util.rs
client_iced/src/widget/builder/state/: heap.rs  mod.rs  once.rs  stack.rs
client_iced/src/widget/builder/widget/: button.rs  text_input.rs
client_iced/src/widget/table/: body.rs  mod.rs
core/: Cargo.toml
core/src/: action.rs  collection.rs  crates.rs  iced_impls.rs  lib.rs  query.rs  schema.rs  service.rs  start.rs  table.rs  users.rs
core/src/app/: env.rs  mod.rs  panic_handler.rs  storage.rs  tracing.rs
core/src/util/: future.rs  http_status_code.rs  maybe_send.rs  mod.rs  start.rs
iced_builder/: Cargo.toml
iced_builder/src/: internal.rs  lib.rs  widget.rs
iced_builder/src/internal/state/: heap.rs  stack.rs
iced_builder/src/internal/widget/: button.rs  text_input.rs
iced_builder/src/widget/: button.rs  column.rs  container.rs  element.rs  row.rs  rule.rs  scrollable.rs  space.rs  text.rs  text_input.rs  toggler.rs
iced_virtual/: Cargo.toml
iced_virtual/src/: child.rs  constrained_row.rs  lib.rs
iced_virtual/src/table/: mod.rs
server/: Cargo.toml
server/migrations/1_create_schema/: down.sql  up.sql
server/src/: app.rs  async_util.rs  auth.rs  crates_client.rs  data.rs  db.rs  job_scheduler.rs  main.rs  server.rs  users.rs  util.rs
server/src/crates/: crates_io_client.rs  crates_io_dump.rs  mod.rs  route.rs
server/src/krate/: crates_io_client.rs  mod.rs
server_db/: Cargo.toml
server_db/migrations/1_create_schema/: down.sql  up.sql
server_db/src/: crates.rs  lib.rs  users.rs
