cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "core",
  "client",
  "server",
]
default-members = [
  "core",
  "client",
  "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

# Note: some workspace dependencies set features to unify features across the workspace, reducing compilation times.
[workspace.dependencies]
att_core = { path = "core", features = ["start", "start_serde_json", "serde", "crates_io"] }
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "time", "macros", "signal"] }
futures = { version = "0.3", features = ["thread-pool"] }
reqwest = "0.11"
url = "2"
crates_io_api = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "1"
dotenvy = "0.15"
directories = "5"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
tracing-log = "0.2"
hashbrown = { version = "0.14", features = ["ahash", "allocator-api2", "inline-more", "raw"] }
