cargo-features = ["named-profiles", "profile-overrides"]

[workspace]
members = [
  "core",
  "client",
  "server",
]
default-members = [
  "core",
  "client",
  "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
att_core = { path = "core" }
tokio = "1"
futures = "0.3"
reqwest = "0.11"
url = "2"
crates_io_api = "0.9"
chrono = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
dotenvy = "0.15"
dotenvy_macro = "0.15"
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-log = "0.2"
hashbrown = "0.14"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "545cc909c9f356dd733d273173694db9b8c28594", default-features = false }
