[workspace]
members = [
  "core",
  "client",
  "iced_builder",
  "iced_virtual",
  "client_iced",
  "server",
]
default-members = [
  "core",
  "client",
  "iced_builder",
  "iced_virtual",
  "client_iced",
  "server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
att_core = { path = "core" }
att_client = { path = "client" }
tokio = "1"
futures = "0.3"
reqwest = "0.12"
url = "2"
crates_io_api = "0.11"
chrono = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1"
dotenvy = "0.15"
dotenvy_macro = "0.15"
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
hashbrown = "0.14"
iced = { git = "https://github.com/iced-rs/iced.git", rev = "b9eb861", default-features = false }
iced_winit = { git = "https://github.com/iced-rs/iced.git", rev = "b9eb861", default-features = false }
iced_renderer= { git = "https://github.com/iced-rs/iced.git", rev = "b9eb861", default-features = false }
http = "1"
diesel = "2"
