[package]
name = "att"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { features = ["advanced", "lazy", "tokio"], git = "https://github.com/iced-rs/iced.git", rev = "4613eb2" }
tokio = { version = "1", features = ["time", "macros"] }
crates_io_api = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dark-light = "1"
directories = "5"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { features = ["advanced", "lazy", "tokio", "webgl"], git = "https://github.com/iced-rs/iced.git", rev = "4613eb2" }
