[package]
name = "att_client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { workspace = true, features = ["start", "serde", "start_serde_json"] }
reqwest = { workspace = true, features = ["json", "cookies"] }
url.workspace = true
dark-light = "1"
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true, features = ["wgpu", "advanced", "tokio"] }
tokio = { workspace = true, features = ["time"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, features = ["advanced", "webgl"] }
gloo-timers = { version = "0.3", features = ["futures"] }
web-time = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "HtmlDocument"] }
