[package]
name = "att_client"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["json", "cookies"] }
url.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "HtmlDocument"] }
