[package]
name = "att_client_dioxus"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { workspace = true, features = ["start", "time", "serde", "start_serde_json"] }
att_client.workspace = true
dioxus = "0.4"
dioxus-web = "0.4"
dark-light = "1"
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
