[package]
name = "att_client_dioxus"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { workspace = true, features = ["app_env", "app_tracing_all", "app_storage", "app_storage_json", "serde", "time"] }
att_client.workspace = true
dioxus = "0.4"
dioxus-web = "0.4"
dark-light = "1"
serde.workspace = true
tracing.workspace = true
chrono.workspace = true
