[package]
name = "att_client_iced"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { workspace = true, features = ["app_env", "app_tracing_all", "app_storage", "app_storage_json", "time", "serde"] }
att_client.workspace = true
dark-light = "1"
serde.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced = { workspace = true, default-features = true, features = ["advanced", "tokio"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
iced = { workspace = true, default-features = true, features = ["advanced"] }
