[package]
name = "att_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
crates_io_api = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
dotenvy_macro = { workspace = true }
directories = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "fmt", "registry"] }
tracing-appender = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
tracing-web = { version = "0.1", optional = true }

[features]
start = ["dep:dotenvy", "dep:directories", "dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender",
  "dep:tracing-log", "dep:console_error_panic_hook", "dep:tracing-web"]
serde = ["dep:serde", "chrono/serde"]
start_serde_json = ["serde", "dep:serde_json"]
crates_io = ["dep:crates_io_api"]
