[package]
name = "att_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
crates_io_api = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
dotenvy_macro = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "fmt", "registry"] }
tracing-appender = { workspace = true, optional = true }
tracing-log = { workspace = true, optional = true }
thiserror.workspace = true
http = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-time = { version = "1", optional = true }
tracing-web = { version = "0.1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
app_env = ["dep:dotenvy", "dep:dotenvy_macro"]
app_tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-appender", "dep:tracing-log", "dep:tracing-web", "dep:console_error_panic_hook"]
app_storage = ["dep:directories"]
app_storage_json = ["serde", "dep:serde_json"]
time = ["dep:tokio", "dep:gloo-timers", "dep:web-time"]
serde = ["dep:serde", "chrono/serde"]
crates_io_api = ["dep:crates_io_api"]
http_status_code = ["dep:http"]
