[package]
name = "att_core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
crates_io_api = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
dotenvy_macro = { workspace = true, optional = true }
directories = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "fmt", "registry"] }
tracing-appender = { workspace = true, optional = true }
iced = { workspace = true, optional = true }
iced_builder = { path = "../iced_builder", optional = true }
iced_virtual = { path = "../iced_virtual", optional = true }
hashlink = "0.9"
thiserror.workspace = true
http = { workspace = true, optional = true }
diesel = { workspace = true, optional = true, default-features = false, features = ["chrono"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
web-time = { version = "1", optional = true }
tracing-web = { version = "0.1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
app_panic_handler = ["dep:console_error_panic_hook"]
app_env = ["dep:dotenvy", "dep:dotenvy_macro"]
app_tracing = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-web"]
app_tracing_file = ["app_tracing", "dep:tracing-appender"]
app_tracing_log = ["app_tracing", "tracing-subscriber/tracing-log"]
app_tracing_all = ["app_tracing", "app_tracing_file", "app_tracing_log"]
app_storage = ["dep:directories"]
app_storage_json = ["app_storage", "serde", "dep:serde_json"]
time = ["dep:tokio", "dep:gloo-timers", "dep:web-time"]
serde = ["dep:serde", "chrono/serde"]
crates_io_api = ["dep:crates_io_api"]
http_status_code = ["dep:http"]
iced = ["dep:iced", "dep:iced_builder", "dep:iced_virtual"]
diesel = ["dep:diesel"]
