[package]
name = "att_server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
att_core = { path = "../core", features = ["start", "start_serde_json", "serde", "crates_io"] }
axum = "0.7"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros", "signal"] }
futures.workspace = true
crates_io_api.workspace = true
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
